<resources>
    <string name="app_name">MyChat</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirm_senha">Confirmar senha</string>
    <string name="btn_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="action_registrar">Registrar</string>
    <string name="btn_link_to_register">Cadastrar-se</string>
    <string name="carregando">Carregando...</string>
    <string name="btn_login">Login</string>
    <string name="val_email_empty">É necessário informar um E-mail!</string>
    <string name="val_senha_empty">Informe a senha!</string>
    <string name="val_confirm_senha_empty">Informe a confirmação da senha!</string>
    <string name="minimum_password">Senha muito curta, insira no mínimo 6 caracteres!</string>
    <string name="auth_failed">Falha na autenticação, verifique seu E-mail e senha ou inscreva-se!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_link_to_login">Voltar para a tela de login</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="hint_apelido">Digite o novo nome/apelido</string>
    <string name="btn_alterar_dados">Alterar dados</string>
    <string name="informe_o_nome">Informe seu nome!</string>
    <string name="empty_message_list">Nenhuma mensagem trocada ainda.</string>
    <string name="hint_nSenha">Digite nova senha</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="forgot_password_msg">Precisamos apenas de sua identificação de e-mail registrada para enviá-lo instruções de redefinição de senha.</string>
    <string name="btn_reset_password">Trocar a senha</string>
    <string name="btn_back"><![CDATA[<< Voltar]]></string>
    <string name="teste_sair">Botão sair clicado</string>
    <string name="teste_redefinir">Botão Redefinir Senha clicado</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sair">Sair</string>
    <string name="action_alterar_dados">Alterar dados</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaçoes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
